--- a/proj.conf
+++ b/proj.conf
@@ -10,8 +10,4 @@ set(CONFIG_SCANF_FLOAT_EX       1)
 
 set(CONFIG_BFLOG                0)
 
-#set(CONFIG_LOG_DISABLE          0)
-#set(CONFIG_ASSERT_DISABLE       0)
-#set(CONFIG_LOG_LEVEL            3)
-#set(CONFIG_LOG_POOL_SIZE      1024)
-#set(CONFIG_LOG_NCOLOR           0)
+set(CONFIG_FREERTOS             1)
