--- a/proj.conf
+++ b/proj.conf
@@ -1,5 +1,6 @@
 set(CONFIG_NEWLIB               0)
 set(CONFIG_NEWLIB_STANDARD      0)
+set(CONFIG_NEWLIB_FATFS         0)
 
 set(CONFIG_VSNPRINTF_NANO       0)
 set(CONFIG_VSNPRINTF_FLOAT      1)
@@ -11,3 +12,7 @@ set(CONFIG_SCANF_FLOAT_EX       1)
 set(CONFIG_BFLOG                0)
 
 set(CONFIG_FREERTOS             1)
+
+set(CONFIG_BSP_SDH_SDCARD       1)
+set(CONFIG_FATFS                1)
+set(CONFIG_FATFS_SDH_SDCARD     1)
