--- a/proj.conf
+++ b/proj.conf
@@ -2,6 +2,8 @@ set(CONFIG_NEWLIB               0)
 set(CONFIG_NEWLIB_STANDARD      0)
 set(CONFIG_NEWLIB_FATFS         0)
 
+set(CONFIG_PSRAM                1)
+
 set(CONFIG_VSNPRINTF_NANO       0)
 set(CONFIG_VSNPRINTF_FLOAT      1)
 set(CONFIG_VSNPRINTF_FLOAT_EX   1)
